# prefix_writer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release-drafter.yaml  release.yaml.disabled
examples/: README.md  basic.rs
src/: lib.rs  prefix_writer.rs
