[package]
name = "prefix_writer"
version = "0.1.0"
edition = "2021"
description = "Crate for a writer that can prefix text that contains mulptiple lines or incomplete lines."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
const_format = "0.2"
pretty_assertions = "0.7"
rand = "0.8"
